@@ -1,23 +1,22 @@
 package io.th0rgal.oraxen.commands;
 
 import dev.jorel.commandapi.CommandAPICommand;
+import dev.jorel.commandapi.arguments.ArgumentSuggestions;
 import dev.jorel.commandapi.arguments.IntegerArgument;
 import dev.jorel.commandapi.arguments.TextArgument;
 import io.th0rgal.oraxen.OraxenPlugin;
 import io.th0rgal.oraxen.config.Message;
-import io.th0rgal.oraxen.items.OraxenItems;
 import io.th0rgal.oraxen.recipes.CustomRecipe;
 import io.th0rgal.oraxen.recipes.builders.FurnaceBuilder;
 import io.th0rgal.oraxen.recipes.builders.RecipeBuilder;
 import io.th0rgal.oraxen.recipes.builders.ShapedBuilder;
 import io.th0rgal.oraxen.recipes.builders.ShapelessBuilder;
 import io.th0rgal.oraxen.recipes.listeners.RecipesEventsManager;
-import net.kyori.adventure.text.minimessage.Template;
-import org.apache.commons.lang.ArrayUtils;
+import io.th0rgal.oraxen.utils.Utils;
+import org.apache.commons.lang3.ArrayUtils;
 import org.bukkit.entity.Player;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RecipesCommand {
     public CommandAPICommand getRecipesCommand() {
@@ -31,20 +30,19 @@ public class RecipesCommand {
     private CommandAPICommand getShowCommand() {
         return new CommandAPICommand("show")
                 .withPermission("oraxen.command.recipes.show")
-                .withArguments(new TextArgument("type").replaceSuggestions(info ->
-                        (String[]) ArrayUtils.addAll(new String[]{"all"},
-                                RecipesEventsManager.get().getPermittedRecipesName(info.sender())))
+                .withArguments(new TextArgument("type").replaceSuggestions(ArgumentSuggestions.strings(info ->
+                        ArrayUtils.addAll(new String[]{"all"},
+                                RecipesEventsManager.get().getPermittedRecipesName(info.sender()))))
                 )
                 .executes((sender, args) -> {
                     if (sender instanceof Player player) {
                         List<CustomRecipe> recipes = RecipesEventsManager.get().getPermittedRecipes(player);
-                        final String[] oraxenItems = OraxenItems.nameArray();
                         final String param = (String) args[0];
                         if (!"all".equals(param))
                             recipes = recipes
                                     .stream()
                                     .filter(customRecipe -> customRecipe.getName().equals(param))
-                                    .collect(Collectors.toList());
+                                    .toList();
                         if (recipes.isEmpty()) {
                             Message.RECIPE_NO_RECIPE.send(sender);
                             return;
@@ -129,7 +127,7 @@ public class RecipesCommand {
                         }
                         final String name = (String) args[0];
                         recipe.saveRecipe(name);
-                        Message.RECIPE_SAVE.send(sender, Template.template("name", name));
+                        Message.RECIPE_SAVE.send(sender, Utils.tagResolver("name", name));
                     } else
                         Message.NOT_PLAYER.send(sender);
                 });
